# prettyPic

./: .gitignore  pyproject.toml
.github/workflows/: python-publish.yml
lib/prettypic/: __init__.py
lib/prettypic/ColorGen/: __init__.py
lib/tests/: main.py
